<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/tv_animacao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/texto_animacao"
                    android:textColor="@color/main"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_fadeout"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_fadeout"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_zoomin"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_zoomin"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_slideup"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_slideup"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_fadein"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_fadein"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_zoomout"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_zoomout"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_slidedown"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_slidedown"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_Rotate"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_rotate"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_Bounce"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_bounce"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_transicao_direita"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_transicao_a_direita"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_transicao_esquerda"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_transicao_a_esquerda"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/btn_transicao_devagar"
                            android:layout_width="match_parent"
                            android:layout_height="68dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:backgroundTint="#42a945"
                            android:text="@string/texto_btn_animacao_transicao_devagar"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </RelativeLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>